# linda_comm_lib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md  appveyor.yml  comm_lib.kdev4  conanfile.txt  linda-lib.sln  linda_comm_lib.kdev4
CMake/: Conan.cmake
cli/: CMakeLists.txt  fail_rate_test.cpp  stress_test.cpp  test_client.cpp
lib/: CMakeLists.txt  commands.cpp  commands.hpp  frame_buffer.cpp  frame_buffer.hpp  header.hpp  linda-lib.cpp  linda-lib.hpp  linda-lib_test.cpp  log.cpp  log.hpp  networking.cpp  networking.hpp  sockets.cpp
linda-lib/: CMakeLists.txt  commands.cpp  commands.hpp  frame_buffer.cpp  frame_buffer.hpp  header.hpp  linda-lib.cpp  linda-lib.hpp  linda-lib.vcxproj  linda-lib.vcxproj.filters  log.cpp  log.hpp  sockets.cpp  sockets.hpp  test_client.cpp
protos/: test.proto
